syntax = "proto3";

package juno.file_service.file;

import "identifiers.proto";

service FileDbService {
  rpc getFile(GetFileRequest) returns (File);
  rpc createFile(CreateFileRequest) returns (File);
  rpc deleteFile(DeleteFileRequest) returns (File);
  rpc updateFile(UpdateFileRequest) returns (File);
}

message File {
  string bucketName = 1;
  int32 configId = 2;
  string filePath = 3;
  string metadata = 4;
}

message GetFileRequest {
  string bucketName = 1;
  int32 configId = 2;
  string filePath = 3;
}

message CreateFileRequest {
  string bucketName = 1;
  int32 configId = 2;
  string filePath = 3;
  string metadata = 4;
}

message UpdateFileRequest {
  string bucketName = 1;
  int32 configId = 2;
  string filePath = 3;
  string metadata = 4;
}

message DeleteFileRequest {
  string bucketName = 1;
  int32 configId = 2;
  string filePath = 3;
}
